# AI-Based-SQL-Injection-Detection-System

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  De_xuat_SQLi_Detection_AI.md  Dockerfile  README.md  TONG_QUAN_DU_AN_SQLI_DETECTION.md  _find_brace.py  data_contract.md  docker-compose.yml  ke_hoach_2_tuan.csv  main.py  pyproject.toml
.github/: copilot-instructions.md
api/: __init__.py
configs/: config.yaml
deploy/: README.md  __init__.py  demo_db.py  main.py  registry.py  schemas.py  tasks.py
docker/: docker-compose.yml
docs/: nhanh3_architecture.md  nhanh3_run_guide.md  setup.md
models/: README.md
notebooks/: exp_b2_feature_test.ipynb  exp_nhanh3_arch_comparison.ipynb  exp_nhanh3_arch_comparison_executed.ipynb  metrics_report.ipynb  model_comparison_nhanh1.ipynb  nhanh2_eval.ipynb  nhanh3_data_report.ipynb  nhanh3_data_report_executed.ipynb  nhanh3_eval.ipynb  nhanh3_eval_executed.ipynb  zeroday_experiment_report.ipynb
report/: ban1_scope_hien_tai.md  ban2_hoan_chinh.md  manifest_ban_2_metrics.md
reports/: nhanh1_eval.json  nhanh2_eval.json  nhanh2_training_audit.md  nhanh3_architecture_comparison.json  nhanh3_eval_cachA.json  nhanh3_eval_gru.json  nhanh3_final_summary.json  nhanh3_gru_adapted_eval.json  nhanh3_gru_threshold_tune.json
scripts/: README.md  build_nhanh1_dataset.py  build_nhanh2_data.py  build_nhanh3_session_data.py  build_normal_baseline.py  collect_nhanh3_traffic.py  compare_nhanh1_architectures.py  domain_adapt_gru.py  download_hf_dataset.py  fetch_and_wrap_d3_csic2010.py  generate_metrics.py  threshold_tune_gru.py  (+7 more)
(+85 files in other folders)
